# camodocal

./: .gitignore  CMakeLists.txt
include/camodocal/camera_models/: EquidistantCamera.h
src/calib/: CMakeLists.txt
src/camera_models/: CMakeLists.txt  EquidistantCamera.cc
src/examples/: CMakeLists.txt  intrinsic_calib.cc  test.cc
src/gpl/: gpl.h
src/visual_odometry/: CMakeLists.txt
